2005-04-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm, Bootstrap.pm: backporting the final version of 
	path prefixes

2005-04-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: restore the CXX default
	* PkgVersion.pm, Bootstrap.pm: use two possible path prefixes,
	path-prefix-g++-3.3 and path-prefix-g++-4.0, depending on the
	current Distribution

2005-04-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* CLI.pm: backport backport get_input to branch_0_23 for use in
	the revised choose_mirrors
	* Configure.pm: choose_mirrors now examines the current choices 
	for outdated entries, and prompts the user about this; the default
	values (chosen after a timeout when running in the fink-mirrors
	postinstall script) will replace any outdated choices of the user
	by currently acceptable choices; also backported the binary return 
	value for choose_mirrors

2005-04-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: back out the CXX default from branch_0_23 for
	now (pending more testing)

2005-04-19  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: backed out the default value for CXXFLAGS, added
	a default value for CXX instead
	* Bootstrap.pm:  recognize 10.3.9
	* PkgVersion.pm: make sure NoSetCXX still works

2005-04-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* CLI.pm, Configure.pm: backport prompt_selection to branch_0_23
	in preparation for revising the mirror selection dialog

2005-04-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: add a default for CXXFLAGS for recent distributions

2005-04-05  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: gettext-tools installed during bootstrap (on
	branch_0_23 only)

2005-02-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: be sure that the pre-expansion of conditionals
	is only applied to ones containing "%{Distribution}"