@@ -1,3 +1,7 @@
+2005-05-04  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* VirtPackage.pm: fix up gimp-print stuff for 10.4
+
 2005-04-26  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* PkgVersion.pm, Bootstrap.pm: backporting the final version of 
